test/libsolidity/syntaxTests/parsing/new_invalid_type_name.sol
contract C {
	function f() {
		new var;
	}
}
// ----
// ParserError 7059: (35-38): Expected explicit type name.
